Fix: #5001 Don't wrap URLs

--- a/src/static/css/pad.css
+++ b/src/static/css/pad.css
@@ -28,6 +28,8 @@ html,
 }
 a {
   color: inherit;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 a img {
   border: 0
